Fix ij inspections